bug-button-collapse

--- a/css/style.css
+++ b/css/style.css
@@ -135,7 +135,7 @@ img.logo-menu {
         padding-top: 30px;
     }
 
-    i.material-icons{
+    a.button-collapse{
         margin-top: 20px;
         margin-left: 10px;
     }
